--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <body>
     <header>
       <nav>
-        <ul>
-          <li><a href="" target="_blank">WEB</a></li>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+<a href="./index.html" target="_blank">WebStudio</a>
+          <ul>
+        <li><a>Studio</a></li>
+       <li><a>Portfolio</a></li>
+       <li><a>Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -25,8 +25,10 @@
     </header>
     <main>
       <!-- Dark-bg -->
-      <h1>Effective Solutions for Your Business</h1>
+        <section>
+      <h1>Effective Solutions<br/>for Your Business</h1>
       <button type="button">Order Service</button>
+            </section>
       <!-- section 1 -->
       <section>
         <h2>Strategy</h2>
@@ -53,27 +55,26 @@
       <!-- section 2 -->
       <section>
         <h2>Our Team</h2>
-        <img src="images/img.jpg" alt="Mark Guerrero" width="264" />
+        <img src="./images/img.jpg" alt="Mark Guerrero" width="264" />
         <h3>Mark Guerrero</h3>
         <p>Product Designer</p>
-        <img src="images/img (1).jpg" alt="Tom Ford" width="264" />
+        <img src="./images/img (1).jpg" alt="Tom Ford" width="264" />
         <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
-        <img src="images/img (2).jpg" alt="Camila Garcia" width="264" />
+        <img src="./images/img (2).jpg" alt="Camila Garcia" width="264" />
         <h3>Camila Garcia</h3>
         <p>Marketing</p>
-        <img src="images/img (3).jpg" alt="Daniel Wilson" width="264" />
+        <img src="./images/img (3).jpg" alt="Daniel Wilson" width="264" />
         <h3>Daniel Wilson</h3>
         <p>UI Designer</p>
       </section>
     </main>
     <footer>
-      <h2><a href="" target="_blank">WEB</a></h2>
-      <h2>STUDIO</h2>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
   </body>
-</html>
+    </html>
