--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
   <body>
     <header>
-      <nav>
 <a href="./index.html" target="_blank">WebStudio</a>
-          <ul>
+<nav>         
+<ul>
         <li><a>Studio</a></li>
        <li><a>Portfolio</a></li>
        <li><a>Contacts</a></li>
@@ -24,57 +24,68 @@
       </address>
     </header>
     <main>
-      <!-- Dark-bg -->
+
         <section>
       <h1>Effective Solutions<br/>for Your Business</h1>
       <button type="button">Order Service</button>
             </section>
-      <!-- section 1 -->
+
       <section>
-        <h2>Strategy</h2>
+        <ul>
+            <li>
+                <h3>Strategy</h3>
         <p>
           Our goal is to identify the business problem to walk away with the
           perfect and creative solution.
         </p>
-        <h2>Punctuality</h2>
+            </li>
+            <li>
+        <h3>Punctuality</h3>
         <p>
           Bring the key message to the brand's audience for the best price
           within the shortest possible time.
         </p>
-        <h2>Diligence</h2>
+    </li>
+    <li>
+        <h3>Diligence</h3>
         <p>
           Research and confirm brands that present the strongest digital growth
           opportunities and minimize risk.
         </p>
-        <h2>Technologies</h2>
+    </li>
+    <li></li>
+        <h3>Technologies</h3>
         <p>
           Design practice focused on digital experiences. We bring forth a deep
           passion for problem-solving.
         </p>
+    </li>
+    </ul>
       </section>
-      <!-- section 2 -->
+
       <section>
         <h2>Our Team</h2>
         <ul>
-        <li>
-        <img src="./images/img.jpg" alt="Mark Guerrero" width="264" />
-        <h3>Mark Guerrero</h3>
-        <p>Product Designer</p>
-    </li>
-    <li>
-        <img src="./images/img (1).jpg" alt="Tom Ford" width="264" />
-        <h3>Tom Ford</h3>
-        <p>Frontend Developer</p>
-        <img src="./images/img (2).jpg" alt="Camila Garcia" width="264" />
-        <h3>Camila Garcia</h3>
-        <p>Marketing</p>
-    </li>
-    <li>
-        <img src="./images/img (3).jpg" alt="Daniel Wilson" width="264" />
-        <h3>Daniel Wilson</h3>
-        <p>UI Designer</p>
-    </li>
-</ul>
+            <li>
+                <img src="./images/markguerrero.jpg" alt="Mark Guerrero" width="264" height="260" />
+                <h3>Mark Guerrero</h3>
+                <p>Product Designer</p>
+            </li>
+            <li>
+                <img src="./images/tomford.jpg" alt="Tom Ford" width="264" height="260" />
+                <h3>Tom Ford</h3>
+                <p>Frontend Developer</p>
+            <li>
+                <img src="./images/camilagarcia.jpg" alt="Camila Garcia" width="264" height="260" />
+                <h3>Camila Garcia</h3>
+                <p>Marketing</p>
+            </li>
+            <li>
+                <img src="./images/danielwilson.jpg" alt="Daniel Wilson" width="264" height="260" />
+                <h3>Daniel Wilson</h3>
+                <p>UI Designer</p>
+            </li>
+        </ul>
       </section>
     </main>
     <footer>
