--- a/index.html
+++ b/index.html
@@ -8,63 +8,64 @@
 
   <body>
     <header>
-<a href="./index.html" target="_blank">WebStudio</a>
-<nav>         
-<ul>
-        <li><a>Studio</a></li>
-       <li><a>Portfolio</a></li>
-       <li><a>Contacts</a></li>
-        </ul>
-      </nav>
-      <address>
+        <nav> 
+        <a href="./index.html">WebStudio</a> 
+    <address>       
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <li><a>Studio</a></li>
+            <li><a>Portfolio</a></li>
+            <li><a>Contacts</a></li>
         </ul>
-      </address>
+    </address>
+        </nav>
+    <address>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+    </address>
     </header>
     <main>
 
         <section>
-      <h1>Effective Solutions<br/>for Your Business</h1>
+      <h1>Effective Solutions <br/>for Your Business</h1>
       <button type="button">Order Service</button>
             </section>
 
       <section>
         <ul>
             <li>
-                <h3>Strategy</h3>
-        <p>
-          Our goal is to identify the business problem to walk away with the
-          perfect and creative solution.
-        </p>
+                <h2>Strategy</h2>
+                <p>
+                    Our goal is to identify the business problem to walk away with the
+                    perfect and creative solution.
+                </p>
             </li>
             <li>
-        <h3>Punctuality</h3>
-        <p>
-          Bring the key message to the brand's audience for the best price
-          within the shortest possible time.
-        </p>
-    </li>
-    <li>
-        <h3>Diligence</h3>
-        <p>
-          Research and confirm brands that present the strongest digital growth
-          opportunities and minimize risk.
-        </p>
-    </li>
-    <li></li>
-        <h3>Technologies</h3>
-        <p>
-          Design practice focused on digital experiences. We bring forth a deep
-          passion for problem-solving.
-        </p>
-    </li>
-    </ul>
+                <h2>Punctuality</h2>
+                <p>
+                    Bring the key message to the brand's audience for the best price
+                    within the shortest possible time.
+                </p>
+            </li>
+            <li>
+                <h2>Diligence</h2>
+                <p>
+                    Research and confirm brands that present the strongest digital growth
+                    opportunities and minimize risk.
+                </p>
+            </li>
+            <li>
+                <h2>Technologies</h2>
+                <p>
+                    Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+                </p>
+            </li>
+        </ul>
       </section>
 
       <section>
-        <h2>Our Team</h2>
+        <h3>Our Team</h3>
         <ul>
             <li>
                 <img src="./images/markguerrero.jpg" alt="Mark Guerrero" width="264" height="260" />
