--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
   <body>
     <header>
         <nav> 
-        <a href="./index.html">WebStudio</a> 
-    <address>       
+        <a href="./index.html" target="_blank">WebStudio</a>
+        <nav>      
         <ul>
-            <li><a>Studio</a></li>
-            <li><a>Portfolio</a></li>
-            <li><a>Contacts</a></li>
+            <li><a href="">Studio</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Contacts</a></li>
         </ul>
-    </address>
         </nav>
     <address>
         <ul>
@@ -28,7 +27,7 @@
     <main>
 
         <section>
-      <h1>Effective Solutions <br/>for Your Business</h1>
+      <h1>Effective Solutions<br/>for Your Business</h1>
       <button type="button">Order Service</button>
             </section>
 
@@ -65,8 +64,8 @@
       </section>
 
       <section>
-        <h3>Our Team</h3>
-        <ul>
+        <h2>Our Team</h2>
+        <ul>        
             <li>
                 <img src="./images/markguerrero.jpg" alt="Mark Guerrero" width="264" height="260" />
                 <h3>Mark Guerrero</h3>
@@ -76,6 +75,7 @@
                 <img src="./images/tomford.jpg" alt="Tom Ford" width="264" height="260" />
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
+            </li>
             <li>
                 <img src="./images/camilagarcia.jpg" alt="Camila Garcia" width="264" height="260" />
                 <h3>Camila Garcia</h3>
