--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 
   <body>
     <header>
-        <a href="./index.html" target="_blank">WebStudio</a>
-        <nav>      
+        <nav>
+            <address>
+        <a href="./index.html" target="_blank">WebStudio</a>     
         <ul>
-            <li><a href="">Studio</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Contacts</a></li>
+            <li><a href="Studio">Studio</a></li>
+            <li><a href="Portfolio">Portfolio</a></li>
+            <li><a href="Contacts">Contacts</a></li>
         </ul>
+    </address> 
         </nav>
     <address>
         <ul>
