--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
   </head>
 
   <body>
-    <header>
+    <header> 
         <nav>
-            <address>
-        <a href="./index.html" target="_blank">WebStudio</a>     
+            <a href="./index.html">WebStudio</a> 
         <ul>
             <li><a href="Studio">Studio</a></li>
             <li><a href="Portfolio">Portfolio</a></li>
             <li><a href="Contacts">Contacts</a></li>
         </ul>
-    </address> 
         </nav>
     <address>
         <ul>
