--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <section>
       <h1>Effective Solutions
-        <br />for Your Business</h1>
+        for Your Business</h1>
       <button type="button">Order Service</button>
             </section>
 
